implementando encontro de itens